Tests/RunCMake/NinjaMultiConfig/SimpleNoCross-all-clean-build-stderr.txt
^ninja: error: unknown target 'clean:all'$
